<resources>
    <string name="app_name">F.R.I.E.N.D.S Quiz</string>
    <string name="rules_for_the_quiz">Rules for the Quiz</string>
    <string name="phoebe_buffay_kudrow">Phoebe Buffay Kudrow</string>
    <string name="question_5_fill_the_blank_from_season_1_nross_i_don_t_want_to_be_single_i_want_to_be_married_again_n_rachel_enters_nchandler">Question 5: Fill the blank from Season 1:  Ross- I don\'t want to be single, I want to be married again.  [Rachel Enters]  Chandler-</string>
    <string name="submit">Submit</string>
    <string name="check_answers">Check Answers</string>
    <string name="todo">TODO</string>
    <string name="six_of_one">Six of One</string>
    <string name="across_the_hall">Across the Hall</string>
    <string name="carol_willick">Carol Willick</string>
    <string name="question_8_whose_name_did_ross_said_as_rachel_at_the_altar">Question 8: Whose name did Ross said as Rachel at the altar?</string>
    <string name="central_perk">Central Perk</string>
    <string name="insomnia_cafe">Insomnia Cafe</string>
    <string name="question_7_which_names_out_of_the_following_were_decided_before_finalizing_f_r_i_e_n_d_s_n_choose_all_correct_answers">Question 7: Which names out of the following were decided before finalizing F.R.I.E.N.D.S.? [Choose all correct answers]</string>
    <string name="phoebe_buffay">Phoebe Buffay</string>
    <string name="chandler_bing">Chandler Bing</string>
    <string name="joey_tribbiani">Joey Tribbiani</string>
    <string name="question_6_who_is_famous_for_the_dialogue_how_you_doin">Question 6: Who is famous for the dialogue \'How you doin?\' ?</string>
    <string name="complete_the_dialogue">Complete the dialogue...</string>
    <string name="manchester">Manchester</string>
    <string name="mr_eddie">Mr. Eddie</string>
    <string name="mr_heckels">Mr. Heckels</string>
    <string name="question_3_who_was_the_neighbour_who_left_everything_to_monica_and_rachel_after_dying">Question 3: Who was the neighbour who left everything to Monica and Rachel after dying?</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="question_2_in_the_whole_series_how_many_kids_birth_is_shown">Question 2: In the whole series how many kids birth is shown?</string>
    <string name="question_4_where_did_monica_and_chandler_move_at_the_end_of_the_series">Question 4: Where did Monica and Chandler move at the end of the series?</string>
    <string name="london">London</string>
    <string name="all_the_best">All the best!</string>
    <string name="phoebe_buffay_hannigan">Phoebe Buffay Hannigan</string>
    <string name="_1_all_questions_test_your_basic_knowledge_about_f_r_i_e_n_d_s_which_is_an_american_tv_show_n2_each_question_carry_1_credit_for_correct_answer_n3_no_negative_marking_n4_you_require_atleast_5_correct_answers_out_of_8_to_pass_this_quiz_test">1. All questions test your basic knowledge about F.R.I.E.N.D.S which is an American TV Show.  2. Each question carry +1 credit for correct answer.  3. No negative marking.  4. You require atleast 5 correct answers out of 8 to pass this Quiz Test.</string>
    <string name="question_1_what_is_full_name_of_phoebe">Question 1: What is full name of Phoebe?</string>
    <string name="phoebe_buffay_abbott">Phoebe Buffay Abbott</string>
    <string name="mr_adam_goldberg">Mr. Adam Goldberg</string>
    <string name="westchester_county">Westchester County</string>
    <string name="emily_waltham">Emily Waltham</string>
    <string name="susan_bunch">Susan Bunch</string>
</resources>
